feat: キャプチャ画像からの初期再生位置をサポート
