# docs/swagger.json
@@ -81,6 +81,18 @@
                         "name": "video_id",
                         "in": "formData",
                         "required": true
+                    },
+                    {
+                        "type": "number",
+                        "description": "ビデオの再生位置（秒）",
+                        "name": "playback_position",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "number",
+                        "description": "コメント遅延秒数",
+                        "name": "comment_delay",
+                        "in": "formData"
                     }
                 ],
                 "responses": {
@@ -1677,6 +1689,9 @@
                 "_": {
                     "type": "string"
                 },
+                "comment_delay": {
+                    "type": "number"
+                },
                 "created_at": {
                     "type": "string"
                 },
@@ -1685,6 +1700,9 @@
                 },
                 "id": {
                     "type": "integer"
+                },
+                "playback_position": {
+                    "type": "number"
                 },
                 "video_id": {
                     "type": "integer"
